--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently \"cd client && vite\" \"cd server && nodemon server\"",
-    "start": "cd server && node server",
-    "build": "cd client && vite build"
+    "start": "nodemon server/server.js",
+    "build": "cd client && vite build",
+    "reset": "node ./server/config/reset.js"
   },
   "dependencies": {
     "@picocss/pico": "^1.5.7",
     "concurrently": "^7.6.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
     "nodemon": "^2.0.21",
     "pg": "^8.10.0",
     "react": "^18.2.0",
